# rust-package-size

./: .gitignore  Cargo.toml  Package.swift  README.md  SIZE_OPTIMIZATION.md  ULTRA_MINIMAL_GUIDE.md  build-ios.sh  build-ultra-minimal.sh  compare-sizes.sh  create-xcframework.sh  demo.sh  size-comparison.md
Sources/RustSPMSDK/: RustSDK.swift
Sources/RustSPMSDKC/include/: RustSPMSDKC.h  rust_spm_sdk.h
Tests/RustSPMSDKTests/: RustSDKTests.swift
src/: lib.rs
