[package]
name = "rust-spm-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_spm_sdk"
crate-type = ["staticlib"]

# Remove all dependencies for maximum size reduction
[dependencies]
# Removed libc dependency - we'll use raw FFI

[profile.release]
# Ultra-aggressive size optimizations
opt-level = "s"          # Sometimes "s" is smaller than "z"
lto = "fat"              # Most aggressive LTO
codegen-units = 1        # Single codegen unit
panic = "abort"          # Smaller panic handling
strip = "symbols"        # Strip all symbols
overflow-checks = false  # Disable overflow checks
debug = false            # No debug info
rpath = false            # No rpath
debug-assertions = false # No debug assertions
incremental = false      # No incremental compilation

# Minimize all dependencies
[profile.release.build-override]
opt-level = "s"
codegen-units = 1
debug = false

# Optimize all dependencies aggressively
[profile.release.package."*"]
opt-level = "s"
debug = false 